--- a/css/style.css
+++ b/css/style.css
@@ -587,7 +587,7 @@ body.dark .ops-modal {
   position: absolute;
   top: 1.1em;
   right: 1.7em;
-  font-size: 1.8rem;
+  font-size: 20px;
   color: var(--clr-accent);
   border: none;
   background: none;
