--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
   --space-3xl: 60px;
 
   /* Layout */
-  --ops-nav-height: 75px; /* height of sticky ops-nav bar */
+  --nav-header-height: 85px; /* height of sticky nav header */
 }
 
 /* Dark Theme Variables */
@@ -701,9 +701,9 @@ body.dark .ops-modal {
 
   .nav-links {
     position: fixed;
-    top: var(--ops-nav-height); /* offset below ops-nav */
+    top: var(--nav-header-height); /* offset below nav header */
     right: 0;
-    height: calc(100% - var(--ops-nav-height)); /* fill remaining viewport */
+    height: calc(100% - var(--nav-header-height)); /* fill remaining viewport */
     width: 70%;
     max-width: 300px;
     display: flex;
