--- a/fabs/css/chatbot.css
+++ b/fabs/css/chatbot.css
@@ -80,7 +80,7 @@ body.dark{--clr-bg:var(--clr-bg-dark);--clr-tx:var(--clr-tx-dark)}
   border: none;
   color: #000;
   font-size: .95rem;
-  margin-top: 15px;
+  margin-top: calc(2rem + 0.5rem);
   resize: none;
 }
 #chatbot-input::placeholder{color:#000}
