--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@
   --clr-form-border: #ccc;
   
   /* Background gradients */
-  --bg-gradient-light: linear-gradient(135deg, #F7DDD0, #FC5C05, #0144FB, #EA202C, #1258DC, #ff0097, #9f00a7, #603cba, #00aba9, #eff4ff, #2b5797, #ee1111);
-  --bg-gradient-dark: #121212;
+    --bg-gradient-light: #ffffff;
+    --bg-gradient-dark: #121212;
 
   /* Spacing */
   --space-xs: 8px;
@@ -42,11 +42,11 @@
 }
 
 /* Dark Theme Variables */
-body.dark {
-  --clr-logo-shadow: #ffffff40;
-  --clr-text: #fafbfe;
-  --clr-text-subtle: #f3ecfe;
-  --clr-text-light: #ccc;
+  .dark {
+    --clr-logo-shadow: #ffffff40;
+    --clr-text: #fafbfe;
+    --clr-text-subtle: #f3ecfe;
+    --clr-text-light: #ccc;
   --clr-background: #121212;
   --clr-background-rgb: 18, 18, 18;
   --clr-card-bg: rgba(32, 26, 49, 0.91);
@@ -95,10 +95,10 @@ body {
   animation: animated-gradient 15s ease infinite;
 }
 
-body.dark {
-  animation: none;
-  background: var(--bg-gradient-dark);
-}
+  .dark body {
+    animation: none;
+    background: var(--bg-gradient-dark);
+  }
 
 main {
   max-width: 1200px;
@@ -403,14 +403,14 @@ li {
   margin-top: 0.9rem;
 }
 
-body.dark .card {
+  .dark .card {
   background: rgba(32, 26, 49, 0.91);
   color: #f3ecfe;
   border-color: #393161;
   box-shadow: 0 2px 24px #11142b88;
 }
 
-body.dark .card .icon > i {
+  .dark .card .icon > i {
   filter: drop-shadow(0 0 2px #00c4ff55);
 }
 
@@ -452,7 +452,7 @@ body.dark .card .icon > i {
   display: flex;
   flex-direction: column;
 }
-body.dark .ops-modal {
+  .dark .ops-modal {
   background: #251541;
   color: #fafbfe;
   border: 1px solid rgba(255, 255, 255, 0.2);
